--- a/newProject/src/app/estudiantes/materias/materias.page.html
+++ b/newProject/src/app/estudiantes/materias/materias.page.html
@@ -1,8 +1,5 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>materias</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header></app-header>
+
 
 <ion-content>
 
